--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This assignment is to show the use of Responsive layout with grid, flex, and media queries.\r Show a list of ongoing flights.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,14 @@
   },
   "homepage": "https://github.com/SiceloVilakazi/Flight_Tracker_Assignment#readme",
   "dependencies": {
-    "leaflet": "^1.9.4"
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.1",
+    "leaflet": "^1.9.4",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
   }
 }
