--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
     "leaflet": "^1.9.4",
+    "rxjs": "^7.8.1",
     "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
