--- a/package.json
+++ b/package.json
@@ -19,18 +19,26 @@
   },
   "homepage": "https://github.com/SiceloVilakazi/Flight_Tracker_Assignment#readme",
   "dependencies": {
-    "css-loader": "^6.8.1",
+    "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.1",
     "leaflet": "^1.9.4",
     "rxjs": "^7.8.1",
-    "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
     "@types/leaflet": "^1.9.3",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.2",
+    "postcss-preset-env": "^8.4.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.2",
     "ts-loader": "^9.4.3",
     "webpack": "^5.85.1"
   }
