--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
+    "tailwindcss": "^3.3.2",
     "ts-loader": "^9.4.3",
     "webpack": "^5.85.1"
   }
